--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,7 +2,7 @@ sphinx==7.2.6
 sphinx_rtd_theme==2.0.0
 sphinxcontrib-apidoc
 readthedocs-sphinx-search==0.3.2
-recommonmark==0.7.1
+myst-parser
 jinja2==3.1.6
 
 # needed for sphinxcontrib-apidoc to do its thing
